--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "npm run lint:fix",
-      "npm run format"
+      "git add"
     ]
   },
   "dependencies": {
