--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "lint-staged": {
     ".{js,jsx}": [
       "npm run lint:fix",
-      "format",
-      "git add"
+      "format"
     ]
   },
   "dependencies": {
