--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
-    "test:watch": "jest --watch",
+    "test:watch": "jest --watchAll",
     "lint": "eslint '**/*.{js,jsx}'",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier-eslint '$PWD/src/**/*.{js,jsx}'"
@@ -20,7 +20,8 @@
   "lint-staged": {
     ".{js,jsx}": [
       "npm run lint:fix",
-      "format"
+      "format",
+      "test"
     ]
   },
   "dependencies": {
@@ -29,9 +30,11 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.10.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
