--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
     "@types/jest": "^25.2.1",
+    "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
