--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
     "@types/jest": "^25.2.1",
     "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
@@ -45,6 +47,7 @@
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "prettier-eslint": "^9.0.1",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier-eslint-cli": "^5.0.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
