--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
