--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint '**/*.{js,jsx}'",
     "lint:fix": "npm run lint -- --fix",
-    "format": "prettier-eslint '$PWD/src/**/*.{js,jsx}'"
+    "format": "prettier-eslint '$(PWD)/src/**/*.{js,jsx}'"
   },
   "husky": {
     "hooks": {
