added coverage to lint staged

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     ".{js,jsx}": [
       "npm run lint:fix",
       "format",
-      "test"
+      "test:coverage"
     ]
   },
   "dependencies": {
