--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     ]
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.2.0",
+    "knex": "^0.21.1",
     "next": "9.3.6",
+    "pg": "^8.2.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
